[gd_scene load_steps=2 format=2]

[ext_resource path="res://Collision_Boxes/Hurtbox.gd" type="Script" id=1]

[node name="Hurtbox" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[connection signal="on_invincibility_end" from="." to="." method="_on_Hurtbox_on_invincibility_end"]
[connection signal="on_invincibility_start" from="." to="." method="_on_Hurtbox_on_invincibility_start"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
